--- a/app/report/views/directFinalInvoice.html
+++ b/app/report/views/directFinalInvoice.html
@@ -1,6 +1,6 @@
 
 
-<button  pdf-save-button="idpartInvoice" pdf-name="someone.pdf"  class="btn">Print</button>
+<button  pdf-save-button="idpartInvoice" pdf-name="DirectFinal-Invoice-{{reportCtrl.order.printOrderNumber}}.pdf"  class="btn">Print</button>
 
 <div pdf-save-content="idpartInvoice" width="100%">
         <my-Invoice-Header></my-Invoice-Header>
@@ -109,21 +109,21 @@
                         <tr class="item">
                             <td>
             
-                                <p>To the printing charge for P.O.NO:{{reportCtrl.order.printOrderNumber}}. {{reportCtrl.order.printBookName}} {{reportCtrl.order.bookType}} {{reportCtrl.order.bookNoOfCopies}}
+                                <p>To the printing charge for P.O.NO:{{reportCtrl.order.printOrderNumber}}. {{reportCtrl.order.printBookName}} {{reportCtrl.order.bookType}} {{reportCtrl.order.bookNoOfCopies | INRCOPIES }}
                                 </p>
             
                             </td>
                             <td style="vertical-align:middle;" align="justify">
             
-                                <p>{{reportCtrl.order.bookNoOfCopies}} Copies</p>
+                                <p align="center">{{reportCtrl.order.bookNoOfCopies | INRCOPIES }} Copies</p>
                             </td>
                             <td>
             
-                                <p>Per 1000 Copies {{reportCtrl.order.printing1000PreRate}}/-</p>
+                                <p align="center">Per 1000 Copies {{reportCtrl.order.printing1000PreRate | INRCOPIES}}/-</p>
                             </td>
                             <td>
             
-                                <p>{{reportCtrl.order.printingRate}}</p>
+                                <p align="center">{{reportCtrl.order.printingRate | INRCOPIES}}</p>
             
                             </td>
                         </tr>
@@ -144,7 +144,7 @@
                                 </td>
                                 <td>
                 
-                                    <p>{{reportCtrl.order.plateMakingRate}}</p>
+                                    <p align="center">{{reportCtrl.order.plateMakingRate | INRCOPIES}}</p>
                 
                                 </td>
                             </tr>
@@ -166,7 +166,7 @@
                             </td>
                             <td>
             
-                                <p>{{reportCtrl.order.transportRate}}</p>
+                                <p align="center">{{reportCtrl.order.transportRate | INRCOPIES}}</p>
             
                             </td>
                         </tr>
@@ -188,7 +188,7 @@
             
                             </td>
                             <td>
-                                <p>{{reportCtrl.order.kraftRate}}</p>
+                                <p align="center">{{reportCtrl.order.kraftRate | INRCOPIES}}</p>
                             </td>
                         </tr>
                         <tr class="total">
@@ -196,7 +196,7 @@
                             
                              <td><strong>Total:</strong></td>
                             <td>
-                                    <strong>  {{reportCtrl.order.totalBillAmount}} </strong>
+                                    <strong>  {{reportCtrl.order.totalBillAmount | INRCOPIES}} </strong>
                             </td>
                         </tr>
                     </tbody>
@@ -204,7 +204,7 @@
             
                 <br>
                 <p>
-                    <strong>In words: {{reportCtrl.order.totalAmountWord}} only /-</strong>
+                    <strong>In words: {{reportCtrl.order.totalAmountWord}} Only /-</strong>
                 </p>
             </div>
             <br>
