--- a/app/report/views/paperStatement.html
+++ b/app/report/views/paperStatement.html
@@ -1,4 +1,4 @@
-<button  pdf-save-button="idpaperStatement" pdf-name="someone.pdf"  class="btn">Print</button>
+<button  pdf-save-button="idpaperStatement" pdf-name="PaperBoard-Statement-{{reportCtrl.order.printOrderNumber}}.pdf"  class="btn">Print</button>
 
 <div pdf-save-content="idpaperStatement" width="100%">
 
@@ -63,7 +63,7 @@
                     <td style="width: 372px;">
                         <p>
                             <span style="font-family: 'Times New Roman', serif;">
-                                <span style="font-size: medium;">Size: A4 No. of copies {{reportCtrl.order.bookNoOfCopies}}</span>
+                                <span style="font-size: medium;">Size: A4 No. of copies {{reportCtrl.order.bookNoOfCopies | INRCOPIES}}</span>
                             </span>
                         </p>
                         &nbsp;</td>
@@ -111,13 +111,13 @@
         <p align="center">&nbsp;</p>
         <p align="center">&nbsp;</p>
         <p align="center">&nbsp;</p>
-        <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">113.9449</span></span></p>
+        <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">{{reportCtrl.order.paperPBIVConsumptionSize}}</span></span></p>
         </td>
         <td colspan="3" rowspan="7" width="164">
         <p align="center">&nbsp;</p>
         <p align="center">&nbsp;</p>
         <p align="center">&nbsp;</p>
-        <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">113.9449Kg</span></span></p>
+        <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">{{reportCtrl.order.paperPBIVConsumptionSize}}Kg</span></span></p>
         </td>
         <td colspan="2" rowspan="7" width="104">
         <p align="center">&nbsp;</p>
@@ -196,10 +196,10 @@
         <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"><strong>Total</strong></span></span></p>
         </td>
         <td colspan="3" width="163">
-        <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">113.9449</span></span></p>
+        <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">{{reportCtrl.order.paperPBIVConsumptionSize}}</span></span></p>
         </td>
         <td colspan="3" width="164">
-        <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">113.9449Kg</span></span></p>
+        <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">{{reportCtrl.order.paperPBIVConsumptionSize}}Kg</span></span></p>
         </td>
         <td colspan="2" width="104">
         <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Nil</span></span></p>
@@ -213,8 +213,7 @@
         <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"><strong>BOARD</strong></span></span></p>
         </td>
         <td rowspan="3" width="102">
-        <p><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">61x90cm 25.3Kg 230GSM Multi -layer Coated</span></span></p>
-        <p><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">(Aura pearl)</span></span></p>
+        <p><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">{{reportCtrl.order.boardPBIVSize}}</span></span></p>
         </td>
         <td colspan="2" width="65">
         <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Reams</span></span></p>
@@ -224,7 +223,7 @@
         </td>
         <td colspan="3" rowspan="3" width="164">
         <p align="center">&nbsp;</p>
-        <p><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">10.143Kg</span></span></p>
+        <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">{{reportCtrl.order.boardPBIVConsumptionSize}}Kg</span></span></p>
         </td>
         <td colspan="4" width="198">
         <p align="center">&nbsp;</p>
@@ -238,10 +237,10 @@
         <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">{{reportCtrl.order.boardPBIVNo}} &ndash; {{ reportCtrl.order.boardPBIVDate | date : 'dd.MM.y' }}</span></span></p>
         </td>
         <td colspan="2" width="65">
-        <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">400</span></span></p>
+        <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">{{reportCtrl.order.boardPBIVReams}}</span></span></p>
         </td>
         <td width="84">
-        <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">184</span></span></p>
+        <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">{{reportCtrl.order.boardPBIVSheets}}</span></span></p>
         </td>
         <td colspan="2" width="104">
         <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Nil</span></span></p>
@@ -278,13 +277,13 @@
         <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"><strong>Total</strong></span></span></p>
         </td>
         <td colspan="2" width="65">
-        <p><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">400</span></span></p>
+        <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">{{reportCtrl.order.boardPBIVReams}}</span></span></p>
         </td>
         <td width="84">
-        <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">184</span></span></p>
+        <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">{{reportCtrl.order.boardPBIVSheets}}</span></span></p>
         </td>
         <td colspan="3" width="164">
-        <p><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">10.143Kg</span></span></p>
+        <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">{{reportCtrl.order.boardPBIVConsumptionSize}}Kg</span></span></p>
         </td>
         <td colspan="2" width="104">
         <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Nil</span></span></p>
@@ -319,7 +318,7 @@
         </td>
         <td rowspan="2" width="130">
         <p align="center">&nbsp;</p>
-        <p align="center">&nbsp;</p>
+       
         <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">OWN KRAFT</span></span></p>
         </td>
         <td width="102">
