--- a/app/report/views/plateeffacement.html
+++ b/app/report/views/plateeffacement.html
@@ -1,4 +1,4 @@
-<button  pdf-save-button="idplaceeffacement" pdf-name="someone.pdf"  class="btn">Print</button>
+<button  pdf-save-button="idplaceeffacement" pdf-name="PlaceEffacement-{{reportCtrl.order.printOrderNumber}}.pdf"  class="btn">Print</button>
 
 <div pdf-save-content="idplaceeffacement" width="100%">
         <my-Invoice-Header></my-Invoice-Header>
@@ -13,7 +13,7 @@
 <p align="right">&nbsp;</p>
 <p align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"><strong>Respected Sir,</strong></span></span></p>
 <p align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"><strong>Sub:</strong></span></span><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">&nbsp;</span></span>Plate Effacement Certificate</p>
-<p align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"></span><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"> This is certify by that have completely WIPE OUT the Plate Proposed for Printing of P.O.NO: {{reportCtrl.order.printOrderNumber}}. {{reportCtrl.order.printBookName}} {{reportCtrl.order.bookType}} {{reportCtrl.order.bookNoOfCopies}}. Date: {{ reportCtrl.order.printOrderDate | date : 'dd.MM.y' }} after printing the entire quantity, ordered by the Tamil Nadu Text Book Corporation.</span></span></p>
+<p align="justify"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"></span><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"> This is certify by that have completely WIPE OUT the Plate Proposed for Printing of P.O.NO: {{reportCtrl.order.printOrderNumber}}. {{reportCtrl.order.printBookName}} {{reportCtrl.order.bookType}} {{reportCtrl.order.bookNoOfCopies | INRCOPIES }}. Date: {{ reportCtrl.order.printOrderDate | date : 'dd.MM.y' }} after printing the entire quantity, ordered by the Tamil Nadu Text Book Corporation.</span></span></p>
 <p align="center"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;">Thanking You</span></span></p>
 <p align="right"><span style="font-family: 'Times New Roman', serif;"><span style="font-size: medium;"> Yours faithfully,</span></span></p>
 </div>
